import "App.proto";

package damuzhi;

option java_package = "com.damuzhi.travel";
option java_outer_classname = "TouristRouteProtos";

//　用于跟团游和自由行列表
message TouristRoute {
  required int32  routeId = 1;				// 线路编号
  required string name = 2;				// 线路名称
  optional string image = 3;				// 线路列表中显示的小图片的绝对URL地址
  optional string shortDescription = 4;			// 线路列表中的简短介绍
  optional int32 averageRank = 5;			// 用户综合评级
  optional int32 days = 6;				// 线路游览天数
  optional string price = 7;				// 线路价格
  repeated int32 agencyIds = 8;				// 旅行社id。基础数据
  required int32 setOutCityId = 9;			// 线路出发城市id。基础数据
  required int32 destinationCityId = 10;		// 线路目的城市id。基础数据
  repeated int32 themeIds = 11;				// 线路主题id：赏花，登山。基础数据
  repeated int32 typeIds = 12;  			// 线路类型id：国内游，东南亚，欧洲。基础数据
  optional int32 followUserCount = 13;			// 线路关注的用户总数	

  optional string customerServiceTelephone = 14;	// 客服电话
  repeated string images = 15;				// 线路详情中滑动图片的绝对URL地址
  optional string characteristic =  16;       		// 线路特色
  repeated DailySchedule dailySchedules = 17;		// 线路行程安排
  repeated Package packages= 18;			// 线路套餐
  optional Booking booking = 19;			// 线路预订情况
  optional string reference = 20;			// 线路参考行程，返回html的绝对url
  repeated int32 placeIds = 21;				// 线路相关景点

  optional string fee = 22;				// 线路费用说明，返回html的绝对url
  optional string bookingNotice = 23;			// 线路预订须知，返回html的绝对url
}

// 用于用户反馈
message UserFeekBack {
  required int32 routeId = 1;		// 线路id
  optional int32 userId = 2;		// 用户id
  optional string nickName = 3;		// 用户名称
  optional string date = 4;		// 评价时间，从1970年1月1日0时0分0秒算起，经过的秒数。
  optional int32 rank = 5; 		// 评级
  optional string feedback = 6; 	// 反馈
}

message Agency {
  required int32 agencyId = 1;	// 旅行社id
  required int32 name = 2;		// 旅行社名称
}

message RouteCity {
  required int32 routeCityId =1;		// 线路城市id
  required string cityName = 2;		// 城市名
  required string countryName = 3;		// 国家名称
}

message DailySchedule {
  required int32 day = 1;			// 第几天
  required string title = 2;			// 每日行程标题
  optional PlaceTour placeTours = 3;		// 景点游览
  optional string breakfast = 4;		// 早餐
  optional string lunch = 5; 			// 午餐
  optional string dinner = 6;			// 晚餐
  optional Accommodation accommodation = 7;	// 入住
} 

message Package {
  required int32 number = 1; 			// 套餐编号
  optional Flight departureFlight = 2;		// 出发航班
  optional Flight returnFlight = 3;		// 回程航班
  repeated Accommodation accommodations = 4;	// 入住
}

message Booking {
  required int32 date = 1;		// 日期，从1970年1月1日0时0分0秒算起，经过的秒数。
  optional int32 status = 2;  		// 状态
  optional string remainder = 3; 	// 剩余票数
  optional string adultPrice = 4;	// 成人价格
  optional string childrenPrice = 5;	// 儿童价格
}

message PlaceTour {
  required int32 id = 1;		// Id
  required string name = 2;   		// 名称
  optional string duration = 3; 	// 游览时间
}

message Dining {
  optional string breakfast = 1;	// 早餐
  optional string lunch = 2; 		// 午餐
  optional string dinner = 3;		// 晚餐
}

message Flight {
  required string number = 1; 			// 航班号
  optional string company = 2;			// 航空公司
  optional string mode = 3;			// 机型
  optional string departCityName = 4; 		// 起飞城市id
  optional string departTime = 5;		// 起飞时间
  optional string departAirport = 6;     	// 起飞机场
  optional string arriveCityName = 7; 		// 到达城市id
  optional string arriveTime = 8;		// 到达时间
  optional string arriveAirport = 9;     	// 到达机场
}

message Accommodation {
  required string hotelName = 1;	// 酒店名称
  optional string roomType = 2;		// 房间类型
  optional string duration =3;		// 住的时间段
}

// 用于用户资料
message UserInfo {
  optional int32 userId = 1;		// 用户id
  required string userName = 2;		// 用户名
  optional string password = 3;		// 密码

  optional string nickName = 4;		// 昵称
  optional int32 gender = 5; 		// 性别

  optional int32 type = 6;		// 会员类型

  optional string fullName = 7;		// 姓名
  optional string telephone = 8;	// 电话
  optional string email = 9; 		// 邮箱
}


// 用于订单
message Order {
  required int32 orderId = 1;		// 订单编号
  required int32 routeId = 2;		// 路线编号
  required int32 date = 3;		// 下订日期，从1970年1月1日0时0分0秒算起，经过的秒数。

  required int32 userId = 4;
  
  optional string routeName = 5;
  optional string setOutCity = 6;
  optional string setOutDate = 7;
  optional string price = 8;
  optional int32 priceStatus = 9;
  optional int32 status = 10;
}
